src/snapshots/lis_lang__parser__tests__stmt_if_else_chain.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "expression",
        found: Some(
            Span {
                range: Pos {
                    offset: 19,
                    line: 1,
                    col: 18,
                }..Pos {
                    offset: 24,
                    line: 1,
                    col: 23,
                },
                node: Keyword(
                    Print,
                ),
            },
        ),
    },
)
