src/snapshots/lis_lang__parser__tests__stmt_if_lone_else.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "expression",
        found: Some(
            Token {
                sigil: Keyword(
                    Else,
                ),
                range: Pos {
                    offset: 15,
                    line: 0,
                    col: 15,
                }..Pos {
                    offset: 19,
                    line: 0,
                    col: 19,
                },
            },
        ),
    },
)
