src/snapshots/lis_lang__parser__tests__stmt_if_unclosed_curly.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "property key of object literal",
        found: Some(
            Span {
                range: Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                }..Pos {
                    offset: 17,
                    line: 0,
                    col: 17,
                },
                node: Keyword(
                    Print,
                ),
            },
        ),
    },
)
