src/snapshots/lis_lang__parser__tests__stmt_let.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 9,
            line: 0,
            col: 9,
        },
        node: Let {
            keyword: Token {
                sigil: Keyword(
                    Let,
                ),
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                },
            },
            pat: Span {
                range: Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                }..Pos {
                    offset: 5,
                    line: 0,
                    col: 5,
                },
                node: Ident {
                    name: "x",
                },
            },
            eq_tok: Token {
                sigil: Eq,
                range: Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
            },
            init: Span {
                range: Pos {
                    offset: 8,
                    line: 0,
                    col: 8,
                }..Pos {
                    offset: 9,
                    line: 0,
                    col: 9,
                },
                node: Num {
                    val: 1.0,
                },
            },
        },
    },
)
