src/snapshots/lis_lang__parser__tests__stmt_let_pat_obj.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 16,
            line: 0,
            col: 16,
        },
        node: Let {
            keyword: Token {
                sigil: Keyword(
                    Let,
                ),
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                },
            },
            pat: Span {
                range: Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                }..Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                },
                node: Obj {
                    brace_l: Token {
                        sigil: CurlyL,
                        range: Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        }..Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        },
                    },
                    props: [
                        (
                            "x",
                            Span {
                                range: Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                }..Pos {
                                    offset: 6,
                                    line: 0,
                                    col: 6,
                                },
                                node: Ident {
                                    name: "x",
                                },
                            },
                        ),
                        (
                            "y",
                            Span {
                                range: Pos {
                                    offset: 8,
                                    line: 0,
                                    col: 8,
                                }..Pos {
                                    offset: 9,
                                    line: 0,
                                    col: 9,
                                },
                                node: Ident {
                                    name: "y",
                                },
                            },
                        ),
                    ],
                    brace_r: Token {
                        sigil: CurlyR,
                        range: Pos {
                            offset: 9,
                            line: 0,
                            col: 9,
                        }..Pos {
                            offset: 10,
                            line: 0,
                            col: 10,
                        },
                    },
                },
            },
            eq_tok: Token {
                sigil: Eq,
                range: Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                }..Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                },
            },
            init: Span {
                range: Pos {
                    offset: 13,
                    line: 0,
                    col: 13,
                }..Pos {
                    offset: 16,
                    line: 0,
                    col: 16,
                },
                node: Var {
                    name: "obj",
                },
            },
        },
    },
)
