src/snapshots/lis_lang__parser__tests__stmt_let_pat_obj_default.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 20,
            line: 0,
            col: 20,
        },
        node: Let {
            keyword: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                },
                node: (),
            },
            pat: Span {
                range: Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                }..Pos {
                    offset: 14,
                    line: 0,
                    col: 14,
                },
                node: Obj {
                    brace_l: Span {
                        range: Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        }..Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        },
                        node: (),
                    },
                    props: [
                        (
                            Span {
                                range: Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                }..Pos {
                                    offset: 6,
                                    line: 0,
                                    col: 6,
                                },
                                node: "x",
                            },
                            Span {
                                range: Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                }..Pos {
                                    offset: 6,
                                    line: 0,
                                    col: 6,
                                },
                                node: Ident {
                                    name: "x",
                                },
                            },
                        ),
                        (
                            Span {
                                range: Pos {
                                    offset: 8,
                                    line: 0,
                                    col: 8,
                                }..Pos {
                                    offset: 9,
                                    line: 0,
                                    col: 9,
                                },
                                node: "y",
                            },
                            Span {
                                range: Pos {
                                    offset: 8,
                                    line: 0,
                                    col: 8,
                                }..Pos {
                                    offset: 13,
                                    line: 0,
                                    col: 13,
                                },
                                node: Default {
                                    pat: Span {
                                        range: Pos {
                                            offset: 8,
                                            line: 0,
                                            col: 8,
                                        }..Pos {
                                            offset: 9,
                                            line: 0,
                                            col: 9,
                                        },
                                        node: Ident {
                                            name: "y",
                                        },
                                    },
                                    eq_tok: Span {
                                        range: Pos {
                                            offset: 10,
                                            line: 0,
                                            col: 10,
                                        }..Pos {
                                            offset: 11,
                                            line: 0,
                                            col: 11,
                                        },
                                        node: (),
                                    },
                                    default: Span {
                                        range: Pos {
                                            offset: 12,
                                            line: 0,
                                            col: 12,
                                        }..Pos {
                                            offset: 13,
                                            line: 0,
                                            col: 13,
                                        },
                                        node: Num {
                                            val: 2.0,
                                        },
                                    },
                                },
                            },
                        ),
                    ],
                    brace_r: Span {
                        range: Pos {
                            offset: 13,
                            line: 0,
                            col: 13,
                        }..Pos {
                            offset: 14,
                            line: 0,
                            col: 14,
                        },
                        node: (),
                    },
                },
            },
            eq_tok: Span {
                range: Pos {
                    offset: 15,
                    line: 0,
                    col: 15,
                }..Pos {
                    offset: 16,
                    line: 0,
                    col: 16,
                },
                node: (),
            },
            init: Span {
                range: Pos {
                    offset: 17,
                    line: 0,
                    col: 17,
                }..Pos {
                    offset: 20,
                    line: 0,
                    col: 20,
                },
                node: Var {
                    name: "obj",
                },
            },
        },
    },
)
