src/snapshots/lis_lang__parser__tests__stmt_let_pat_obj_nested.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 18,
            line: 0,
            col: 18,
        },
        node: Let {
            keyword: Token {
                sigil: Keyword(
                    Let,
                ),
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                },
            },
            pat: Span {
                range: Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                }..Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                },
                node: Obj {
                    brace_l: Token {
                        sigil: CurlyL,
                        range: Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        }..Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        },
                    },
                    props: [
                        (
                            "x",
                            Span {
                                range: Pos {
                                    offset: 8,
                                    line: 0,
                                    col: 8,
                                }..Pos {
                                    offset: 11,
                                    line: 0,
                                    col: 11,
                                },
                                node: Obj {
                                    brace_l: Token {
                                        sigil: CurlyL,
                                        range: Pos {
                                            offset: 8,
                                            line: 0,
                                            col: 8,
                                        }..Pos {
                                            offset: 9,
                                            line: 0,
                                            col: 9,
                                        },
                                    },
                                    props: [
                                        (
                                            "y",
                                            Span {
                                                range: Pos {
                                                    offset: 9,
                                                    line: 0,
                                                    col: 9,
                                                }..Pos {
                                                    offset: 10,
                                                    line: 0,
                                                    col: 10,
                                                },
                                                node: Ident {
                                                    name: "y",
                                                },
                                            },
                                        ),
                                    ],
                                    brace_r: Token {
                                        sigil: CurlyR,
                                        range: Pos {
                                            offset: 10,
                                            line: 0,
                                            col: 10,
                                        }..Pos {
                                            offset: 11,
                                            line: 0,
                                            col: 11,
                                        },
                                    },
                                },
                            },
                        ),
                    ],
                    brace_r: Token {
                        sigil: CurlyR,
                        range: Pos {
                            offset: 11,
                            line: 0,
                            col: 11,
                        }..Pos {
                            offset: 12,
                            line: 0,
                            col: 12,
                        },
                    },
                },
            },
            eq_tok: Token {
                sigil: Eq,
                range: Pos {
                    offset: 13,
                    line: 0,
                    col: 13,
                }..Pos {
                    offset: 14,
                    line: 0,
                    col: 14,
                },
            },
            init: Span {
                range: Pos {
                    offset: 15,
                    line: 0,
                    col: 15,
                }..Pos {
                    offset: 18,
                    line: 0,
                    col: 18,
                },
                node: Var {
                    name: "obj",
                },
            },
        },
    },
)
