src/snapshots/lis_lang__parser__tests__stmt_let_pat_obj_rename.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 16,
            line: 0,
            col: 16,
        },
        node: Let {
            keyword: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                },
                node: (),
            },
            pat: Span {
                range: Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                }..Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                },
                node: Obj {
                    brace_l: Span {
                        range: Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        }..Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        },
                        node: (),
                    },
                    props: [
                        (
                            Span {
                                range: Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                }..Pos {
                                    offset: 6,
                                    line: 0,
                                    col: 6,
                                },
                                node: "x",
                            },
                            Span {
                                range: Pos {
                                    offset: 8,
                                    line: 0,
                                    col: 8,
                                }..Pos {
                                    offset: 9,
                                    line: 0,
                                    col: 9,
                                },
                                node: Ident {
                                    name: "y",
                                },
                            },
                        ),
                    ],
                    brace_r: Span {
                        range: Pos {
                            offset: 9,
                            line: 0,
                            col: 9,
                        }..Pos {
                            offset: 10,
                            line: 0,
                            col: 10,
                        },
                        node: (),
                    },
                },
            },
            eq_tok: Span {
                range: Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                }..Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                },
                node: (),
            },
            init: Span {
                range: Pos {
                    offset: 13,
                    line: 0,
                    col: 13,
                }..Pos {
                    offset: 16,
                    line: 0,
                    col: 16,
                },
                node: Var {
                    name: "obj",
                },
            },
        },
    },
)
