src/snapshots/lis_lang__parser__tests__stmt_print.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 7,
            line: 0,
            col: 7,
        },
        node: Print {
            keyword: Token {
                sigil: Keyword(
                    Print,
                ),
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 5,
                    line: 0,
                    col: 5,
                },
            },
            expr: Span {
                range: Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
                node: Num {
                    val: 1.0,
                },
            },
        },
    },
)
