src/snapshots/lis_lang__parser__tests__stmt_print_str.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 20,
            line: 0,
            col: 20,
        },
        node: Print {
            keyword: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 5,
                    line: 0,
                    col: 5,
                },
                node: (),
            },
            expr: Span {
                range: Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                }..Pos {
                    offset: 20,
                    line: 0,
                    col: 20,
                },
                node: Str {
                    val: "hello\nworld",
                },
            },
        },
    },
)
